Update cogna - add tool param required option - tool enable/disable - add tab/accordion On Activate
Fix form progressive/multi-step form. Prevent jump will be ignore if not multistep
Fix multistep for accordion.

--- a/src/app/_shared/component/entry-filter/entry-filter.component.html
+++ b/src/app/_shared/component/entry-filter/entry-filter.component.html
@@ -19,7 +19,7 @@
                   class="text-muted">{{sec.section.title}} -
                 </span>{{field.label}}
               </label>
-              <!-- Utk keluarkan checkbox Dynamic -->>
+              <!-- Utk keluarkan checkbox Dynamic -->
               @if (['text','textarea','eval','qr'].indexOf(field.type)==-1) {
                 <div class="float-end">
                   <input type="checkbox" class="form-check-input" id="filter{{f.code}}{{fm}}-dyn"
