--- a/src/app/design/editor/cogna-editor/cogna-editor.component.scss
+++ b/src/app/design/editor/cogna-editor/cogna-editor.component.scss
@@ -46,3 +46,7 @@ fieldset legend.model-section{
               padding:0px;margin-left:3px;line-height: 25px; text-align: center; margin-right:0.8em;
             border-radius:20px;
 }
+
+.strike{
+  text-decoration: line-through;
+}
